--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   dotted_border: ^2.0.0+2
   file_picker: ^4.6.1
   provider: ^6.0.3
+  ml_linalg: ^13.9.0
 
 dev_dependencies:
   flutter_test:
