--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   file_picker: ^4.6.1
   provider: ^6.0.3
   ml_linalg: ^13.9.0
+  vector_math: ^2.1.2
 
 dev_dependencies:
   flutter_test:
